[package]
name = "random_bench"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "random_bench"
path = "random_bench.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8.5", features = ["small_rng"] }
rand_xoshiro = "0.6.0"
thousands = "0.2.0"
